--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,66 @@
     <script src="../libraries/p5.js"></script>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="title">
+          <h1>Game of Life</h1>
+        </div>
+    </div>
+
+    <h2>generation #<span id="generation">0</span></h2>
+    <div id="canvas"></div>
+
+    <div class="controls-container">
+      <div class="controls">
+        <label for="speed">simulation speed</label>
+        <input
+          class="slider"
+          id="speed"
+          type="range"
+          min="1"
+          max="60"
+          step="1"
+          value="60"
+        />
+        <label for="blur">motion blur amount</label>
+        <input
+          class="slider"
+          id="blur"
+          type="range"
+          min="5"
+          max="255"
+          step="1"
+          value="5"
+        />
+        <div class="buttons">
+          <button id="playback">start</button>
+          <button id="clear">clear</button>
+          <button id="reseed">re-seed</button>
+        </div>
+        <div class="info">
+          <h3>rules:</h3>
+          <p>
+            <span class="bold">1.</span> any live cell with fewer than two live
+            neighbors dies (underpopulation)
+          </p>
+          <p>
+            <span class="bold">2.</span> any live cell with more than 3 live
+            neighbors dies (overpopulation)
+          </p>
+          <p>
+            <span class="bold">3.</span> any dead cell with exactly 3 live
+            neighbors becomes alive (reproduction)
+          </p>
+          <p>
+            <span class="bold">4.</span> in any other case the cell lives on to
+            the next generation (aging)
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <script src="../src/components/Cell.js"></script>
+    <script src="../src/components/Grid.js"></script>
+    <script src="../src/life.js"></script>
 </body>
 </html>
