--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game of Life</title>
 
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="../src/styles/main.css" />
     <script src="../libraries/p5.js"></script>
 </head>
 <body>
