--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,10 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">
-          <h1>Game of Life</h1>
-        </div>
+          <h2>Game of Life</h2>
     </div>
 
-    <h2>generation #<span id="generation">0</span></h2>
+    <h3>generation #<span id="generation">0</span></h3>
     <div id="canvas"></div>
 
     <div class="controls-container">
@@ -37,22 +35,22 @@
           <button id="reseed">re-seed</button>
         </div>
         <div class="info">
-          <h3>rules:</h3>
+          <h3>Rules:</h3>
           <p>
-            <span class="bold">1.</span> any live cell with fewer than two live
-            neighbors dies (underpopulation)
+            <strong>1. </strong>&nbsp;Any live cell with fewer than two live
+            neighbors dies due to underpopulation.
           </p>
           <p>
-            <span class="bold">2.</span> any live cell with more than 3 live
-            neighbors dies (overpopulation)
+            <strong>2. </strong>&nbsp;Any live cell with more than 3 live
+            neighbors dies due to overpopulation.
           </p>
           <p>
-            <span class="bold">3.</span> any dead cell with exactly 3 live
-            neighbors becomes alive (reproduction)
+            <strong>3. </strong>&nbsp;Any dead cell with exactly 3 live
+            neighbors becomes alive akin to reproduction.
           </p>
           <p>
-            <span class="bold">4.</span> in any other case the cell lives on to
-            the next generation (aging)
+            <strong>4. </strong>&nbsp;In any other case the cell lives on to
+            the next generation, ages.
           </p>
         </div>
       </div>
