--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game of Life</title>
 
-    <link rel="stylesheet" href="../src/styles/main.css" />
-    <script src="../libraries/p5.js"></script>
+    <link rel="stylesheet" href="main.css" />
+    <script src="libraries/p5.js"></script>
 </head>
 <body>
     <div class="header">
@@ -56,8 +56,8 @@
       </div>
     </div>
 
-    <script src="../src/components/Cell.js"></script>
-    <script src="../src/components/Grid.js"></script>
-    <script src="../src/life.js"></script>
+    <script src="Cell.js"></script>
+    <script src="Grid.js"></script>
+    <script src="life.js"></script>
 </body>
 </html>
