adjusted p5 file structure for Netlify deployment

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Game of Life</title>
 
     <link rel="stylesheet" href="main.css" />
-    <script src="libraries/p5.js"></script>
+    <script src="p5.js"></script>
 </head>
 <body>
     <div class="header">
