--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Game of Life</title>
 
     <link rel="stylesheet" href="main.css" />
-    <script src="p5.js"></script>
+    <!-- <script src="p5.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 </head>
 <body>
     <div class="header">
-          <h2>Game of Life</h2>
+      <h2>Game of Life</h2>
     </div>
 
     <h3>generation #<span id="generation">0</span></h3>
